fix horizontal scrolling for menu tree

--- a/apps/humanatlas.io/src/app/components/menu-tree/menu-tree.component.scss
+++ b/apps/humanatlas.io/src/app/components/menu-tree/menu-tree.component.scss
@@ -17,6 +17,7 @@
     border-radius: 0px 0px 8px 8px;
     height: auto;
     overflow-y: auto;
+    overflow-x: hidden;
     padding: 0.5rem 0;
 
     &:has(hubmap-nav) {
